// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CheckboxField renders correctly 1`] = `
<form
  action="#"
  onReset={[Function]}
  onSubmit={[Function]}
>
  <div
    className="py-2"
  >
    <div
      className="relative"
    >
      <div
        className="relative p-3 flex justify-center w-36"
        data-testid="public-div"
      >
        <input
          checked={false}
          className="accent-red-900 bg-transparent border-gray-300 rounded border-2 w-5 h-5 focus:ring-0"
          id="public"
          name="public"
          onBlur={[Function]}
          onChange={[Function]}
          type="checkbox"
          value=""
        />
      </div>
    </div>
  </div>
</form>
`;

exports[`FieldSet renders correctly 1`] = `
<form
  action="#"
  onReset={[Function]}
  onSubmit={[Function]}
>
  <fieldset
    className=" flex flex-wrap flex-row justify-start border-2 p-4 gap-3"
    name="set"
  >
    <legend
      className="text-red-900 font-black text-lg px-2"
      data-testid="set-legend"
    >
      Infos
    </legend>
    <div />
  </fieldset>
</form>
`;

exports[`FieldWithError renders correctly with label 1`] = `
<form
  action="#"
  onReset={[Function]}
  onSubmit={[Function]}
>
  <div
    className="py-2"
  >
    <div
      className="relative"
    >
      <div />
      <label
        className="text-gray-400 px-2 absolute left-0 -top-3.5 text-sm transition-all peer-placeholder-shown:text-base peer-placeholder-shown:text-gray-400 peer-placeholder-shown:top-2 peer-focus:-top-3.5 peer-focus:text-sm peer-focus:text-red-900  w-full"
        htmlFor="set"
      >
        Infos
      </label>
    </div>
  </div>
</form>
`;

exports[`FieldWithError renders correctly without label 1`] = `
<form
  action="#"
  onReset={[Function]}
  onSubmit={[Function]}
>
  <div
    className="py-2"
  >
    <div
      className="relative"
    >
      <div />
    </div>
  </div>
</form>
`;

exports[`NumberField renders correctly 1`] = `
<form
  action="#"
  onReset={[Function]}
  onSubmit={[Function]}
>
  <div
    className="py-2"
  >
    <div
      className="relative"
    >
      <input
        className="bg-transparent border-gray-300 text-gray-600 peer h-10 border-0 border-b-2 placeholder-transparent focus:outline-none focus:ring-0 focus:border-red-900 w-36"
        id="ref"
        name="ref"
        onBlur={[Function]}
        onChange={[Function]}
        placeholder=" "
        step={1}
        type="number"
        value=""
      />
    </div>
  </div>
</form>
`;

exports[`TextAreaField renders correctly 1`] = `
<form
  action="#"
  onReset={[Function]}
  onSubmit={[Function]}
>
  <div
    className="py-2"
  >
    <div
      className="relative"
    >
      <textarea
        className="bg-transparent border-gray-300 text-gray-600 peer h-10 border-0 border-b-2 placeholder-transparent focus:outline-none focus:ring-0 focus:border-red-900 w-100 focus:h-32"
        id="title"
        name="title"
        onBlur={[Function]}
        onChange={[Function]}
        placeholder=" "
        value=""
      />
    </div>
  </div>
</form>
`;

exports[`TextField renders correctly 1`] = `
<form
  action="#"
  onReset={[Function]}
  onSubmit={[Function]}
>
  <div
    className="py-2"
  >
    <div
      className="relative"
    >
      <input
        className="bg-transparent border-gray-300 text-gray-600 peer h-10 border-0 border-b-2 placeholder-transparent focus:outline-none focus:ring-0 focus:border-red-900 w-full"
        id="title"
        name="title"
        onBlur={[Function]}
        onChange={[Function]}
        placeholder=" "
        type="text"
        value=""
      />
    </div>
  </div>
</form>
`;
